# numerology_app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
numerology_app/: __init__.py  calculate_context.py  faith_code_calculation.py  generate_pdf.py  main.py  setup_fonts.py
numerology_app/data/: arcanes.json  blocks.json  emot_cont_meaning.json  emotional_contour.json  health.json  int_cont_meaning.json  intellectual_contour.json  karm_dolg.json  karm_kod_tysyachnik.json  month_markers.json  phys_cont_meaning.json  physical_contour.json  planet_zadachi.json  reactivity_markers.json  soc_zadachi.json  tysyachnye_kody.json  year_markers.json  zadachi_po_periodam.json
